--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://basicit.co.kr/IRIS.ipa</string>
+					<string>https://basicit.co.kr/IRIS3.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
