--- a/manifest0101.plist
+++ b/manifest0101.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/zk0qy0nxelpv9aj/IRIS.ipa</string>
+					<string>https://basicit.co.kr/iris/IRIS.ipa0101</string>
 				</dict>
 				<dict>
 					<key>kind</key>
