--- a/manifest_240325/manifest23New.plist
+++ b/manifest_240325/manifest23New.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://basicit.co.kr/iris/240325/irisHanmii23New.ipa/string>
+					<string>https://basicit.co.kr/iris/240325/irisHanmii23New.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
