--- a/manifest_240325/manifest03.plist
+++ b/manifest_240325/manifest03.plist
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>irisYoung03</string>
+				<string>iris</string>
 			</dict>
 		</dict>
 	</array>
