--- a/iris/QA/240708/manifest.plist
+++ b/iris/QA/240708/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://basicit.co.kr/iris/QA/240708/irisYoungNew.plist</string>
+					<string>https://basicit.co.kr/iris/QA/240708/irisYoungNew.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
