--- a/iris/PROD/250403/manifest03.plist
+++ b/iris/PROD/250403/manifest03.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://basicit.co.kr/iris/PROD/250403/irisYoung03New.ipa</string>
+					<string>https://eagersync.github.io/iris/PROD/250403/irisYoung03New.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
