--- a/iris/PROD/250403/manifest03.plist
+++ b/iris/PROD/250403/manifest03.plist
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>irisYoung03New</string>
+				<string>IRIS</string>
 			</dict>
 		</dict>
 	</array>
